# flakehell

./: .gitignore  pyproject.toml
flakehell/: _constants.py
flakehell/_logic/: _extractors.py  _plugin.py  _snapshot.py
flakehell/_patched/: _app.py
tests/test_logic/: test_plugin.py
