[tool.flakehell]
exclude = ["example.py", "setup.py", "README.rst", ".venv"]
max_line_length = 120
show_source = true

[tool.flakehell.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
flake8-commas = ["+*"]
flake8-quotes = ["+*"]
pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401", "-E1102", "-E1123"]

# -- DEPHELL -- #

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
envs = ["main", "dev"]
tag = "v."
command = "python -m flakehell lint"

[tool.dephell.pytest]
from = {format = "poetry", path = "pyproject.toml"}
envs = ["main", "dev"]
tests = ["tests"]
command = "python -m pytest tests/"

[tool.dephell.docs]
from = {format = "poetry", path = "pyproject.toml"}
envs = ["docs"]
command = "sphinx-build -W docs docs/build"

[tool.dephell.isort]
from = {format = "poetry", path = "pyproject.toml"}
envs = ["main", "dev"]
command = "isort -rc -y"

[tool.dephell.typing]
from = {format = "poetry", path = "pyproject.toml"}
envs = ["main"]
command = "mypy --ignore-missing-imports --allow-redefinition flakehell/"

# -- ISORT -- #

[tool.isort]
line_length = 100
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
include_trailing_comma = true
not_skip = "__init__.py"
multi_line_output = 5

import_heading_stdlib = "built-in"
import_heading_thirdparty = "external"
import_heading_firstparty = "project"
import_heading_localfolder = "app"

[tool.poetry]
name = "flakehell"
version = "0.8.1"
description = "It's a [Flake8](https://gitlab.com/pycqa/flake8) wrapper to make it cool."
authors = ["Gram (orsinium) <master_fess@mail.ru>", "Gytis Raciukaitis <206232+noxxious@users.noreply.github.com>"]
license = "MIT"
homepage="https://github.com/life4/flakehell"
documentation = "https://flakehell.readthedocs.io/"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.scripts]
flakehell = "flakehell:entrypoint"
flake8helled = "flakehell:flake8_entrypoint"

[tool.poetry.plugins."flake8.extension"]
pylint = "flakehell.plugins:PyLintChecker"

[tool.poetry.plugins."flake8.report"]
baseline = "flakehell.formatters:BaseLineFormatter"
colored = "flakehell.formatters:ColoredFormatter"
gitlab = "flakehell.formatters:GitlabFormatter"
grouped = "flakehell.formatters:GroupedFormatter"
json = "flakehell.formatters:JSONFormatter"
stat = "flakehell.formatters:StatFormatter"

[tool.poetry.dependencies]
python = ">=3.7, <4"
colorama = "^0.4.4"
entrypoints = "^0.3"
flake8 = ">3.6, <4"
Pygments = "^2.10.0"
toml = "^0.10.2"
urllib3 = "^1.26.7"

[tool.poetry.dev-dependencies]
colorama = "^0.4.4"
dlint = "^0.11.0"
flake8-2020 = "^1.6.0"
flake8-aaa = "^0.12.0"
flake8-absolute-import = "^1.0"
flake8-alfred = "^1.1.1"
flake8-annotations-complexity = "^0.0.6"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-broken-line = "^0.3.0"
flake8-bugbear = "^21.9.2"
flake8-builtins = "^1.5.3"
flake8-coding = "^1.3.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.6.1"
flake8-debugger = "^4.0.0"
flake8-django = "^1.1.2"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.1.0"
flake8-executable = "^2.1.1"
flake8-expression-complexity = "^0.0.9"
flake8-fixme = "^1.1.1"
flake8-functions = "^0.0.6"
flake8-future-import = "^0.4.6"
flake8-import-order = "^0.18.1"
flake8-isort = "^4.0.0"
flake8-logging-format = "^0.6.0"
flake8-mock = "^0.3"
flake8-mutable = "^1.2.0"
flake8-mypy = "^17.8.0"
flake8-pep3101 = "^1.3.0"
flake8-pie = "^0.15.0"
flake8-print = "^4.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-pyi = "^20.10.0"
flake8-pytest-style = "^1.5.0"
flake8-pytest = "^1.3"
flake8-quotes = "^3.3.0"
flake8-requirements = "^1.5.1"
flake8-rst-docstrings = "^0.2.3"
flake8-scrapy = "^0.0.1"
flake8-spellcheck = "^0.24.0"
flake8-SQL = "^0.4.1"
flake8_strict = "^0.2.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.4.1"
flake8-todo = "^0.7"
flake8-use-fstring = "^1.1"
flake8-variables-names = "^0.0.4"
mccabe = "^0.6.1"
pandas-vet = "^0.2.2"
pylint = "^2.11.1"
typing-extensions = "^3.10.0"
wemake-python-styleguide = "^0.15.3"
pytest = "^6.2.5"
isort = "^5.9.3"
alabaster = "^0.7.12"
pygments-github-lexers = "^0.0.5"
recommonmark = "^0.7.1"
Sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
